<resources>
    <string name="app_name">LabUX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Ticket</string>
    <string name="menu_slideshow">About Us</string>


    <string name="error_message">Error Message</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login">Login</string>
    <string name="enter_passwd">Enter password</string>
    <string name="menu_logout">Logout</string>
</resources>