<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <ImageView
            android:id="@+id/logo_depan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jalihara_logo"
            android:layout_marginTop="72dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_depan"
            android:layout_marginTop="12dp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textSize="32dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_below="@id/welcome_text">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#3955BF"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameEditText"
                    android:hint="@string/enter_username"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/password"
                android:textColor="#3955BF"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout.Rounded">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/passwordEditText"
                    android:hint="@string/enter_password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorMessageTextView"
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="18dp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
